--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
           <img src="assets/icons/studx.png" alt="StuDX Style" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">StudXStyle by MEXT</h3>
           <p class="text-base text-gray-700 mb-4">文科省の情報発信サイト</p>
         </div>
         <div class="card-tags"></div>
@@ -252,6 +253,7 @@
           <img src="assets/icons/wakuwaku.png" alt="学校DX化でわくわくをサポート" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">学校DX化でわくわくをサポート</h3>
           <p class="text-base text-gray-700 mb-4">先生のための授業・教材研究を支援する情報プラットフォーム</p>
         </div>
         <div class="card-tags"></div>
@@ -265,6 +267,7 @@
           <img src="assets/icons/kyouiku-ict.png" alt="教育ICT環境改革" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">ICTインフォグラフィック</h3>
           <p class="text-base text-gray-700 mb-4">未来の教育提案</p>
         </div>
         <div class="card-tags"></div>
@@ -277,6 +280,7 @@
           <img src="assets/icons/touchpanel.png" alt="タッチパネルテスト" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">タッチパネルテスト</h3>
           <p class="text-base text-gray-700 mb-4">タブレットのタッチ動作を確認</p>
         </div>
         <div class="card-tags"></div>
@@ -290,6 +294,7 @@
           <img src="assets/icons/keyboard.png" alt="キーボードテスト" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">キーボードテスト</h3>
           <p class="text-base text-gray-700 mb-4">タブレットのキーボード動作を確認</p>
         </div>
         <div class="card-tags"></div>
@@ -303,6 +308,7 @@
           <img src="assets/icons/romanji.png" alt="ローマ字表記の課題" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">ローマ字表記の課題</h3>
           <p class="text-base text-gray-700 mb-4">言語教育の改善</p>
         </div>
         <div class="card-tags"></div>
@@ -315,6 +321,7 @@
           <img src="assets/icons/microbit.png" alt="micro:bit" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">micro:bit購入プラン</h3>
           <p class="text-base text-gray-700 mb-4">プログラミング教育</p>
         </div>
         <div class="card-tags"></div>
@@ -327,6 +334,7 @@
           <img src="assets/icons/aicontents.png" alt="AI" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">AI教育コンテンツハブ</h3>
           <p class="text-base text-gray-700 mb-4">人工知能との学び</p>
         </div>
         <div class="card-tags"></div>
@@ -339,6 +347,7 @@
           <img src="assets/icons/viscuit.png" alt="ビスケット授業計画" class="w-full h-full object-contain">
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">ビスケット授業計画</h3>
           <p class="text-base text-gray-700 mb-4">プログラミング入門</p>
         </div>
         <div class="card-tags"></div>
@@ -353,6 +362,7 @@
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">百マス計算アプリ</h3>
           <p class="text-base text-gray-700 mb-4">一桁の足し算・引き算を素早く計算練習</p>
         </div>
         <div class="card-tags"></div>
@@ -365,13 +375,13 @@
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5 flex flex-col items-center">
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">タブレットのお約束</h3>
           <p class="text-base text-gray-700 mb-4">はじめてのパソコン　小学校1年生との約束</p>
         </div>
         <div class="card-tags"></div>
       </a>
 
       <!-- AI Mode On - GIGA Tablets (NEW) -->
-      <!-- タイトルとタグを更新: 「Google検索のAIモードについて」, 「提言」 -->
       <a href="https://medu-web.github.io/AI-mode-on-GIGA-tablets/" target="_blank" class="content-card" 
          data-categories="提言">
         <div class="card-image-container w-32 h-32 flex items-center justify-center">
@@ -380,21 +390,25 @@
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5 flex flex-col items-center">
-          <!-- 説明文をタイトルに合わせて更新 -->
-          <p class="text-base text-gray-700 mb-4">Google検索のAIモードについて</p>
+          <!-- タイトルを明示的に追加 -->
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">Google検索のAIモードについて</h3>
+          <!-- 説明文をより具体的なものに変更 -->
+          <p class="text-base text-gray-700 mb-4">GIGAタブレットでのAI活用に関する提言</p>
         </div>
         <div class="card-tags"></div>
       </a>
 
       <!-- 生成AIパスポート (NEW) -->
-      <!-- タイトルとタグを維持: 「生成AIパスポート」, 「生成AI, AI教育」 -->
       <a href="https://medu-web.github.io/Generative-AI-Passport/" target="_blank" class="content-card" 
-         data-categories="生成AI,AI教育">
+         data-categories="生成AI,AI教育,提言">
         <div class="card-image-container w-32 h-32 flex items-center justify-center">
-          <img src="assets/icons/ai_passport.png" alt="生成AIパスポート" onerror="this.onerror=null;this.src='https://placehold.co/128x128/3B82F6/ffffff?text=AI+Pass';" class="w-full h-full object-contain">
+          <!-- 画像パスをassets/icons/ai_passport.pngからassets/icons/GeneratedAI.pngに変更 -->
+          <img src="assets/icons/GeneratedAI.png" alt="生成AIパスポート" onerror="this.onerror=null;this.src='https://placehold.co/128x128/3B82F6/ffffff?text=AI+Pass';" class="w-full h-full object-contain">
           <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
         </div>
         <div class="p-5 flex flex-col items-center">
+          <!-- タイトルを明示的に追加 -->
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">生成AIパスポート</h3>
           <p class="text-base text-gray-700 mb-4">安全かつ効果的に生成AIを使うための利用ガイド</p>
         </div>
         <div class="card-tags"></div>
