--- a/index.html
+++ b/index.html
@@ -240,6 +240,23 @@
     <!-- リンクのグリッド -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="content-grid">
       
+      <!-- プログラミングポータル (NEW) -->
+      <a href="https://medu-web.github.io/Programming_Portal/" target="_blank" class="content-card" 
+         data-categories="プログラミング,教育改革" data-updated="2025-10-03">
+        <div class="card-image-container w-32 h-32 flex items-center justify-center">
+          <!-- プレースホルダー画像 -->
+          <img src="https://placehold.co/128x128/6D28D9/ffffff?text=Code+Portal" alt="プログラミングポータル" onerror="this.onerror=null;this.src='https://placehold.co/128x128/6D28D9/ffffff?text=Code+Portal';" class="w-full h-full object-contain">
+          <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
+        </div>
+        <div class="p-5 flex flex-col items-center">
+          <!-- タイトルを明示的に追加 -->
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">プログラミングポータル</h3>
+          <!-- 説明文をより具体的なものに変更 -->
+          <p class="text-base text-gray-700 mb-4">小学校のプログラミング教育に役立つ情報集</p>
+        </div>
+        <div class="card-tags"></div>
+      </a>
+
       <!-- StudXStyle by MEXT -->
       <a href="https://www.mext.go.jp/studxstyle/" target="_blank" class="content-card"
         data-categories="GIGAスクール構想,教育改革" data-updated="2025-01-01">
