--- a/index.html
+++ b/index.html
@@ -240,6 +240,23 @@
     <!-- リンクのグリッド -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="content-grid">
       
+      <!-- 生成AIの年齢制限 (NEWLY ADDED) -->
+      <a href="https://medu-web.github.io/Generative-AI-age-requirements/" target="_blank" class="content-card" 
+         data-categories="生成AI,提言,AI教育" data-updated="2025-10-04">
+        <div class="card-image-container w-32 h-32 flex items-center justify-center">
+          <!-- プレースホルダー画像 (年齢制限を示すイメージ) -->
+          <img src="https://placehold.co/128x128/D97706/ffffff?text=AI+Age" alt="生成AIの年齢制限" onerror="this.onerror=null;this.src='https://placehold.co/128x128/D97706/ffffff?text=AI+Age';" class="w-full h-full object-contain">
+          <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
+        </div>
+        <div class="p-5 flex flex-col items-center">
+          <!-- タイトルを明示的に追加 -->
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">生成AIの年齢制限</h3>
+          <!-- 説明文をより具体的なものに変更 -->
+          <p class="text-base text-gray-700 mb-4">生成AIツールの安全な利用年齢と注意点</p>
+        </div>
+        <div class="card-tags"></div>
+      </a>
+      
       <!-- プログラミングポータル (NEW) -->
       <a href="https://medu-web.github.io/Programming_Portal/" target="_blank" class="content-card" 
          data-categories="プログラミング,教育改革" data-updated="2025-10-03">
