--- a/index.html
+++ b/index.html
@@ -258,6 +258,24 @@
     <!-- リンクのグリッド -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="content-grid">
       
+      <!-- === ここに新しいカードを追加 === -->
+      <a href="https://medu-web.github.io/Copilot_GIGA/" target="_blank" class="content-card" 
+         data-categories="生成AI,タブレット,AI教育,提言" data-updated="2025-10-06">
+        <div class="card-image-container w-32 h-32 flex items-center justify-center">
+          <!-- プレースホルダー画像 (AIリスクを示すイメージ) -->
+          <img src="https://placehold.co/128x128/FF5733/ffffff?text=AI+Risk" alt="こどものタブレットで生成AIが使えてしまう" onerror="this.onerror=null;this.src='https://placehold.co/128x128/FF5733/ffffff?text=AI+Risk';" class="w-full h-full object-contain">
+          <div class="absolute top-2 right-2 bg-red-500 text-xs text-white px-2 py-1 rounded-full shadow-md">NEW</div>
+        </div>
+        <div class="p-5 flex flex-col items-center">
+          <!-- タイトルを明示的に追加 -->
+          <h3 class="text-xl font-semibold text-gray-900 mb-2">こどものタブレットで生成AIが使えてしまう</h3>
+          <!-- 説明文 -->
+          <p class="text-base text-gray-700 mb-4">GIGAタブレットでのCopilot利用に関する注意点</p>
+        </div>
+        <div class="card-tags"></div>
+      </a>
+      <!-- === 新しいカードここまで === -->
+
       <!-- タイピング！ (NEWLY ADDED EXPANDABLE CARD) -->
       <a onclick="openTypingModal()" class="content-card"
          data-categories="タイピング,ツール,学習" data-updated="2025-10-05">
